# ProtIntel

./: .env.example  .gitignore  README.md  evaluate.py  generate_manifest.py  infer.py  preflight_checks.py  pyproject.toml  requirements-dev.txt  requirements.txt  scratch_verify.py  train.py
.github/workflows/: ci.yml  tests.yml
backend/: __init__.py  main.py
backend/middleware/: __init__.py  cors.py
backend/routers/: __init__.py  info.py  predict.py  upload.py
backend/schemas/: request.py  response.py
backend/services/: __init__.py  export_service.py  inference_service.py
colab/: ProtIntel_GPU_Training.ipynb
configs/: data.yaml  inference.yaml  model.yaml  training.yaml
docker/: .gitkeep  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: API.md  Architecture.md  PROJECT_REPORT.md  README.md  Research.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AttentionHeatmap.tsx  Layout.tsx
frontend/src/utils/: api.ts
scratch/: generate_dummy_datasets.py  probe_dtu.py
scripts/: bootstrap_checkpoint.py  download_data.py  generate_embeddings.py  package_for_colab.ps1  preprocess.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  data_module.py  fasta_parser.py  preprocessor.py  protein_dataset.py
src/evaluation/: __init__.py  evaluator.py  visualizer.py
src/models/: __init__.py  attention_block.py  bilstm_encoder.py  cnn_encoder.py  embedding_cache.py  embedding_generator.py  prediction_head.py  protintel_model.py
src/training/: __init__.py  callbacks.py  losses.py  metrics.py  trainer.py
src/utils/: __init__.py  config_loader.py  io_utils.py  logger.py  reproducibility.py
src/xai/: __init__.py  attention_rollout.py  explainability_engine.py  shap_explainer.py
tests/: __init__.py
tests/api/: __init__.py  conftest.py  test_api_predict.py  test_info.py  test_predict.py
tests/integration/: __init__.py  test_model_forward.py
tests/unit/: __init__.py  test_cache_gating.py  test_dataset.py  test_embedding_cache.py  test_label_parsing_regression.py
(+6 files in other folders)
